--- a/.env-example
+++ b/.env-example
@@ -1,10 +1,8 @@
 API_ID=
 API_HASH=
+USE_RANDOM_DELAY_IN_RUN=True
+RANDOM_DELAY_IN_RUN=[10, 30]
+USE_REF=True
+REF_ID=boink722419931
+USE_PROXY_FROM_FILE=False
 
-USE_RANDOM_DELAY_IN_RUN=
-RANDOM_DELAY_IN_RUN=
-
-USE_REF=
-REF_ID=
-
-USE_PROXY_FROM_FILE=
